<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/ll_wifi_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_wifi_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/tv_cureent_wifi"
            android:textColor="@drawable/color_pink"
            android:textSize="@dimen/tv_size" />

        <TextView
            android:id="@+id/tv_device_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/tv_info"
            android:textColor="@drawable/color_pink"
            android:textSize="@dimen/tv_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_connet_wifi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/tv_connet_wifi"
            android:textColor="@drawable/color_pink"
            android:textSize="@dimen/tv_size" />

        <Button
            android:id="@+id/bt_connet_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ir_swich_selector"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/bt_connet_wifi"
            android:textColor="@drawable/white"
            android:textSize="@dimen/tv_size" />
    </LinearLayout>

</RelativeLayout>