<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="3dp" >

        <TextView
            android:id="@+id/tv_wifi_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:background="@drawable/scan_selector"
            android:gravity="center_vertical|right"
            android:paddingRight="15dp"
            android:text="@string/wifi_search"
            android:textColor="#ffffff"
            android:focusable="true"
            android:clickable="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_wifi_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:text="@string/wifi_state"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_wifi_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6dp"
            android:background="@drawable/start_selector"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true"
            android:visibility="gone"
            android:text="@string/wifi_start"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <!-- <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#88ffffff" /> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/lv_wifi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:layout_weight="1"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@null"
            android:listSelector="@android:color/transparent"
            android:scrollbars="none" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/ib_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/top_selector" />

            <com.sat.mirrorcontorl.wifi.VerticalSeekBar
                android:id="@+id/sbv_progress"
                style="@android:style/Widget.SeekBar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:maxHeight="8dp"
                android:minHeight="8dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:progressDrawable="@drawable/proress_vertacal_folder"
                android:thumb="@drawable/seekbar_thumb"
                android:thumbOffset="15dp" >
            </com.sat.mirrorcontorl.wifi.VerticalSeekBar>

            <ImageButton
                android:id="@+id/ib_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/down_selector" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/tv_device_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tv_info"
            android:textColor="@drawable/color_pink"
            android:textSize="@dimen/tv_size" />
    </LinearLayout>

</LinearLayout>